--- a/app/assets/stylesheets/includes/assistance.scss
+++ b/app/assets/stylesheets/includes/assistance.scss
@@ -7,7 +7,7 @@
     @extend .dropdown-menu;
 }
 
-#assistance.autocomplete-menu
+#assistance.autocomplete-menu, #assistance.dropdown-menu
 {
     width:300px;
     padding: 0.75rem;
