--- a/app/views/items/_note.html.erb
+++ b/app/views/items/_note.html.erb
@@ -1,3 +1,4 @@
+<div class="card-body">
 <%= turbo_frame_tag "note-#{note.id}" do %>
 <% if note.log %>
 <div class="small">
@@ -21,3 +22,4 @@
 </div>
 <% end %>
 <% end %>
+</div>
