--- a/app/assets/stylesheets/includes/content.scss
+++ b/app/assets/stylesheets/includes/content.scss
@@ -14,7 +14,7 @@ section, .sectionbody .content
 	{
 		margin-bottom: 0.35rem;
 	}
-	
+
 	blockquote, pre
 	{
 		padding-top: 1rem;
@@ -55,7 +55,7 @@ section, .sectionbody .content
 
 	ul p + p, ol p + p
 	{
-		margin:0 0 0.5em 0;
+		margin:0.5em 0 0;
 	}
 
 	ul.checkboxes, ul.radios, ul.none
