allow exam buttons in pages

--- a/app/views/admin/exams/index.html.erb
+++ b/app/views/admin/exams/index.html.erb
@@ -29,7 +29,7 @@
 
                             <div class="button-bar ms-auto me-0" style="display: inline-flex; gap: 0.5rem;">
                                 <%= link_to "#{bootstrap_icon('menu-button-wide')} <label>Settings</label>".html_safe, edit_admin_exam_path(exam), data: { 'turbo-frame' => 'modal' }, class: 'btn' %>
-                                <%= button_to "#{bootstrap_icon('layout-text-window-reverse')} <label>Test in IDE</label>".html_safe, exam_url(id: exam.id), method: :post, class: 'btn ', data: { turbo: false } %>
+                                <%= button_to "#{bootstrap_icon('layout-text-window-reverse')} <label>Test in IDE</label>".html_safe, exam_path(id: exam.id), method: :post, class: 'btn ', data: { turbo: false } %>
                             </div>
                         </li>
                         <% end %>
