--- a/app/assets/stylesheets/includes/print.scss
+++ b/app/assets/stylesheets/includes/print.scss
@@ -1,131 +1,138 @@
 /****************************************************************************
 *  print styles
-*
 */
 
-@media print
-{
-	body
-	{
-		padding-top:0;
-		background-color:transparent ! important;
-	}
+@media print {
+    @page {
+        size: auto; /* auto is the initial value */
+        margin: 2cm;
+    }
 
-	#sidebar, #navbar, footer, ul.nav, #content > h1, iframe,
-	#schedule-column, #comments-column, .embed,
-	section#submit-content, #float-nav, .alert
-	{
-		display:none !important;
-	}
+    html {
+        font-size: 9pt;
+        line-height: 1.1;
+    }
 
-	.home, .page, .boxes
-	{
-		#sidebar, #content
-		{
-			a[href*="//"]:after
-			{
-				content:none;
-			}
-		}
-	}
+    body {
+        padding-top: 0;
+        background-color: transparent !important;
+    }
 
-	#markdown-toc
-	{
-		float:none !important;
-		position:initial !important;
-		border:0 !important;
-		padding:0 !important;
+    #sidebar,
+    #navbar,
+    footer,
+    ul.nav,
+    #content > h1,
+    iframe,
+    #schedule-column,
+    #comments-column,
+    .embed,
+    section#submit-content,
+    #float-nav,
+    .alert {
+        display: none !important;
+    }
 
-		a
-		{
-			text-decoration:none;
-		}
-	}
-
-	main
-	{
-		margin:0;
-		width:100% !important;
-		max-width:100% !important;
-		flex:0 0 100% !important;
-	}
-
-	#content
-	{
-		width:auto;
-		max-width:auto;
-		margin-right:0 !important;
-	}
-
-	#content, #content p
-	{
-		font-size:10pt ! important;
-	}
-
-	#content h1
-	{
-		margin:0; padding:0;
-	}
-
-	#content, section
-	{
-		border:none;
-		display:block;
-	}
-
-	section textarea
-	{
-		resize:none;
-	}
-
-	section
-    {
-        font-size: 10pt;
-        h1
-    	{
-           	font-size: 20pt;
-    	}
-        h2
-        {
-            font-size: 17pt;
-        }
-        h3
-        {
-            font-size: 15pt;
+    .home,
+    .page,
+    .boxes {
+        #sidebar,
+        #content {
+            a[href*="//"]:after
+            {
+                content: none;
+            }
         }
     }
 
-	#content blockquote
-	{
-		margin-left:0;
-		margin-right:0;
-		padding:1em 0;
-		border-left:0;
-		border-top:1px solid black;
-		border-bottom:1px solid black;
-	}
+    #markdown-toc {
+        float: none !important;
+        position: initial !important;
+        border: 0 !important;
+        padding: 0 !important;
 
-	[class*="span"], .uneditable-input[class*="span"]
-	{
-		float: none;
-		display: block;
-		width: 100%;
-		margin-left: 0;
-		-webkit-box-sizing: border-box;
-		-moz-box-sizing: border-box;
-		box-sizing: border-box;
-	}
+        a {
+            text-decoration: none;
+        }
+    }
 
-	section pre
-	{
-		border: 1pt solid gray;
-	}
+    main {
+        margin: 0;
+        width: 100% !important;
+        max-width: 100% !important;
+        flex: 0 0 100% !important;
+    }
 
-	@page
-	{
-		size: auto;   /* auto is the initial value */
+    section {
+        width: auto;
+        max-width: auto;
+        margin-right: 0 !important;
+        max-width: 100% !important;
+        padding: 0;
+        border: none;
+        display: block;
 
-		/* this affects the margin in the printer settings */
-		/* margin: 20mm 20mm 20mm 20mm; */
-	}
+        p {
+            widows: 3;
+            orphans: 3;
+        }
+
+        h1,
+        h2,
+        h3 {
+            break-after: avoid-page;
+            page-break-inside: avoid;
+
+            ::after {
+                content: "";
+                display: block;
+                height: 100px;
+                margin-bottom: -100px;
+            }
+        }
+
+        h1 {
+            font-size: 20pt;
+        }
+        h2 {
+            font-size: 17pt;
+        }
+        h3 {
+            font-size: 15pt;
+        }
+
+        textarea {
+            resize: none;
+        }
+
+        pre {
+            border: 1pt solid gray;
+        }
+
+        blockquote {
+            margin-left: 0;
+            margin-right: 0;
+            padding: 1em 0;
+            border-left: 0;
+            border-top: 1px solid black;
+            border-bottom: 1px solid black;
+            background: none;
+        }
+
+        dt,
+        dd {
+            break-inside: avoid;
+        }
+    }
+
+    [class*="span"],
+    .uneditable-input[class*="span"] {
+        float: none;
+        display: block;
+        width: 100%;
+        margin-left: 0;
+        -webkit-box-sizing: border-box;
+        -moz-box-sizing: border-box;
+        box-sizing: border-box;
+    }
 }
