--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -33,6 +33,7 @@
 </div>
 <% end %>
 
+<% unless @body_class == 'mini-app' %>
 <% if current_user&.persisted? && !current_user.staff? && !current_user.can_submit? %>
 <div class="alert alert-danger alert-top fade show">
     <% if !current_user.status_active_or_registered? %>
@@ -41,6 +42,7 @@
     <%= t('submit.cant_not_logged_in') %>
     <% end %>
 </div>
+<% end %>
 <% end %>
 
 <body class="<%= @body_class || controller.controller_name %>">
