--- a/app/views/application/_menu_items.html.erb
+++ b/app/views/application/_menu_items.html.erb
@@ -8,7 +8,7 @@
 	<%= menu_link 'Hands', hands_path, icon: 'people-fill' %>
 	<% end %>
 	<%= menu_link 'Exams', admin_exams_path, icon: 'droplet', condition: Exam.any? %>
-	<%= menu_link 'Announcements...', alerts_path, icon: 'bell-fill', target: 'modal' %>
+	<%= menu_link 'Announcements...', alerts_path, icon: 'bell-fill', target: 'modal', accesskey: 'a' %>
 	<%= menu_link 'Tests...', tests_path, icon: 'check', target: 'modal', condition: current_schedule.grading_config.tests.any? %>
 	<%= menu_link 'Set module...', edit_schedule_current_module_path(current_schedule), icon: 'calendar', target: 'modal', condition: current_schedule.can_admin_set_module? %>
 <% end %>
@@ -23,7 +23,7 @@
 <% end %>
 
 <%= menu_group 'Course' do %>
-	<%= menu_link 'Course administration...', admin_course_path, icon: 'inboxes', target: 'modal' %>
+	<%= menu_link 'Course administration...', admin_course_path, icon: 'inboxes', target: 'modal', accesskey: 's' %>
 	<%= menu_link 'Site configuration...', admin_site_path, icon: 'wrench', target: 'modal' %>
 	<%= menu_link 'Edit permissions...', admin_users_path, icon: 'unlock', target: 'modal' %>
 	<% if Settings.hands_allow %>
