--- a/app/views/layouts/modal.html.erb
+++ b/app/views/layouts/modal.html.erb
@@ -1,18 +1,25 @@
 <turbo-frame id="modal">
-<div class="modal-content">
-	<% if content_for?(:title) %>
-	<div id="modal-browser-header">
-		<%= yield(:title) %>
-		<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-	</div>
-	<% end %>
-	<div id="modal-browser-body">
-		<%= yield %>
-	</div>
-	<% if content_for?(:footer) %>
-	<div id="modal-browser-footer">
-		<%= yield(:footer) %>
-	</div>
-	<% end %>
-</div>
+  <div class="modal-content">
+    <div id="modal-browser-header">
+      <% if content_for?(:title) %>
+        <%= yield(:title) %>
+      <% else %>
+        <%= render partial: "admin_modal_tabs" %>
+      <% end %>
+      <button
+        type="button"
+        class="btn-close"
+        data-bs-dismiss="modal"
+        aria-label="Close"
+      ></button>
+    </div>
+    <div id="modal-browser-body">
+      <%= yield %>
+    </div>
+    <% if content_for?(:footer) %>
+      <div id="modal-browser-footer">
+        <%= yield(:footer) %>
+      </div>
+    <% end %>
+  </div>
 </turbo-frame>
